tests/testFiles/semanticErrors/reinitializeconstant.meme
overlyattachedgirlfriend.jpg a = 10;
overlyattachedgirlfriend.jpg a = "hi!";
